examples/test/testpolicy3981.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3981
  namespace: namespace170
spec:
  podSelector:
    matchLabels:
      key35: value10
      key44: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value35
      podSelector:
        matchLabels:
          key47: value25
          key14: value17
          key8: value8
